--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="5000">
-                <img src="/img/pizza.jpg" class="d-block w-100" alt="pizza">
+                <img src="pizza.jpg" class="d-block w-100" alt="pizza">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="5000">
-                <img src="img/maggi.jpg" class="d-block w-100" alt="maggi">
+                <img src="maggi.jpg" class="d-block w-100" alt="maggi">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="5000">
-                <img src="/img/momo.jpg" class="d-block w-100" alt="momo">
+                <img src="momo.jpg" class="d-block w-100" alt="momo">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
@@ -102,7 +102,7 @@
             <div class="row my-5">
                 <div class="col-log-6 col-md-6 col-12 col-xxl-6">
                     <figure>
-                        <img class="aboutimg" src="/img/allupakoida.jpg" alt="allupakoida">
+                        <img class="aboutimg" src="allupakoida.jpg" alt="allupakoida">
                     </figure>
                 </div>
                 <div
@@ -149,7 +149,7 @@
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row ">
                       <div class="col-md-4">
-                        <img src="img/rajmarice.jpg" class="img-fluid rounded-start" alt="img">
+                        <img src="rajmarice.jpg" class="img-fluid rounded-start" alt="img">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -165,7 +165,7 @@
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row ">
                       <div class="col-md-4">
-                        <img src="img/rajmarice.jpg" class="img-fluid rounded-start" alt="img">
+                        <img src="rajmarice.jpg" class="img-fluid rounded-start" alt="img">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -194,40 +194,40 @@
             <div class="row gy-5 my-5">
                 <div class="col-md-4 col-12 col-xxl-4 mx-auto">
                     <figure>
-                        <img class="img-fluid rounded-start" src="/img/allupakoida.jpg" alt="img">
+                        <img class="img-fluid rounded-start" src="allupakoida.jpg" alt="img">
                     </figure>
                 </div>
                 <div class="col-md-4 col-12 col-xxl-4 mx-auto">
                     <figure>
-                        <img class="img-fluid rounded-start" src="/img/allupakoida.jpg" alt="img">
+                        <img class="img-fluid rounded-start" src="allupakoida.jpg" alt="img">
                     </figure>
                 </div><div class="col-md-4 col-12 col-xxl-4 mx-auto">
                     <figure>
-                        <img class="img-fluid rounded-start" src="/img/allupakoida.jpg" alt="img">
+                        <img class="img-fluid rounded-start" src="allupakoida.jpg" alt="img">
                     </figure>
                 </div><div class="col-md-4 col-12 col-xxl-4 mx-auto">
                     <figure>
-                        <img class="img-fluid rounded-start" src="/img/allupakoida.jpg" alt="img">
+                        <img class="img-fluid rounded-start" src="allupakoida.jpg" alt="img">
                     </figure>
                 </div><div class="col-md-4 col-12 col-xxl-4 mx-auto">
                     <figure>
-                        <img class="img-fluid rounded-start" src="/img/allupakoida.jpg" alt="img">
+                        <img class="img-fluid rounded-start" src="allupakoida.jpg" alt="img">
                     </figure>
                 </div><div class="col-md-4 col-12 col-xxl-4 mx-auto">
                     <figure>
-                        <img class="img-fluid rounded-start" src="/img/allupakoida.jpg" alt="img">
+                        <img class="img-fluid rounded-start" src="allupakoida.jpg" alt="img">
                     </figure>
                 </div><div class="col-md-4 col-12 col-xxl-4 mx-auto">
                     <figure>
-                        <img class="img-fluid rounded-start" src="/img/allupakoida.jpg" alt="img">
+                        <img class="img-fluid rounded-start" src="allupakoida.jpg" alt="img">
                     </figure>
                 </div><div class="col-md-4 col-12 col-xxl-4 mx-auto">
                     <figure>
-                        <img class="img-fluid rounded-start" src="/img/allupakoida.jpg" alt="img">
+                        <img class="img-fluid rounded-start" src="allupakoida.jpg" alt="img">
                     </figure>
                 </div><div class="col-md-4 col-12 col-xxl-4 mx-auto">
                     <figure>
-                        <img class="img-fluid rounded-start" src="/img/allupakoida.jpg" alt="img">
+                        <img class="img-fluid rounded-start" src="allupakoida.jpg" alt="img">
                     </figure>
                 </div>
             </div>
